<resources>
    <string name="app_name">Project proto_1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Dont_have_an_account">Dont have an account?</string>
    <string name="Create_new">Create new</string>
    <string name="or">or</string>
    <string name="login_through_google">Login through google</string>
    <string name="Terms_and_Condition">Terms and Condition</string>
    <string name="Punjabi_University_Patiala">Punjabi University Patiala</string>
    <string name="title_activity_tabs_page">tabs_page</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>

