<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".login_page">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/navigation_menu" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:gravity="center"
                android:text="PUP-ERP"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_marginTop="25dp"
                app:errorEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="100dp"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextEmail"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:errorEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_login"
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:layout_below="@+id/editTextPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_button"
                android:text="login"
                android:textSize="15sp"
                android:textStyle="normal"></Button>

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_login"
                android:layout_centerHorizontal="true"
                android:padding="2dp"
                android:layout_marginTop="10sp"
                android:text="@string/or"
                android:textSize="10sp"></TextView>

            <View
                android:layout_width="150dp"
                android:layout_height="2dp"
                android:layout_below="@+id/button_login"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/or"
                android:background="@color/grey"></View>

            <View
                android:layout_width="150dp"
                android:layout_height="2dp"
                android:layout_below="@+id/button_login"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@+id/or"
                android:background="@color/grey"></View>

            <ImageView
                android:id="@+id/google"
                android:layout_marginTop="7sp"
                android:layout_width="25sp"
                android:layout_height="20sp"
                android:layout_below="@+id/or"
                android:layout_marginRight="10sp"
                android:layout_toLeftOf="@+id/google_login"
                android:src="@drawable/google"></ImageView>

            <TextView
                android:id="@+id/google_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/or"
                android:layout_marginTop="10sp"
                android:layout_centerHorizontal="true"
                android:text="@string/login_through_google"
                android:textSize="10sp"></TextView>

            <androidx.core.widget.ContentLoadingProgressBar
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:visibility="invisible"
                android:layout_marginTop="10dp"
                android:layout_below="@id/google_login"
                android:layout_centerHorizontal="true"></androidx.core.widget.ContentLoadingProgressBar>

            <TextView
                android:id="@+id/textView_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_login"
                android:layout_centerHorizontal="true"
                android:layout_gravity="bottom"
                android:layout_marginTop="250dp"
                android:text="@string/Dont_have_an_account"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/button_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_1"
                android:layout_centerHorizontal="true"
                android:gravity="bottom"
                android:paddingLeft="3dp"
                android:paddingTop="3dp"
                android:text="@string/Create_new"
                android:textColor="@color/colorButton"
                android:textSize="15sp" />

            <View
                android:id="@+id/down_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/button_signUp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@color/grey"></View>


            <TextView
                android:id="@+id/terms_and_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:layout_below="@id/down_line"
                android:text="@string/Terms_and_Condition"
                android:textColor="#000000"
                android:textSize="15sp" />
        </RelativeLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>